tcc3/manifests/ingress-controller/websocket/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Connection: upgrade
      Upgrade: websocket
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Service-Type: WebSocket";
      more_set_headers "X-Protocol: WebSocket/1.1";
spec:
  rules:
  - host: "*.example.com"
    http:
      paths:
      - path: /ws(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: websocket-service
            port:
              number: 8080
